Iniziato a fare la finestra per il prossimo tetramino
Ho iniziato a farla ma non so com'è perchè non posso eseguirlo, ma tanto non mi serve ormai sono fortissimo.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,5 +33,7 @@ add_executable(ProgettoTetris
         Collisioni/CollisioniNuovo.hpp
         Screen/GameOver.cpp
         Screen/GameOver.hpp
+        Screen/NextT.cpp
+        Screen/NextT.hpp
 )
 target_link_libraries( ProgettoTetris ${CURSES_LIBRARIES} )
