sempre più vicini alla fine
funziona lo score e game Over. da sistemre place con colore (senza strecchare) e alcune collisioni non sono perfette. Pulito un po' il main da merda di angelo.  Modificato anche SIDEBAR per punteggio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,5 +35,7 @@ add_executable(ProgettoTetris
         Screen/GameOver.hpp
         Screen/NextT.cpp
         Screen/NextT.hpp
+        ScoreManager/ScoreManager.cpp
+        ScoreManager/ScoreManager.hpp
 )
 target_link_libraries( ProgettoTetris ${CURSES_LIBRARIES} )
