aggiunto classifica finale e salvataggio
ho aggiunto getUsername classe sideBar di angelo. pulito un po' di cose e migliorato salvataggio su file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,9 @@ add_executable(ProgettoTetris
         fileManagement/file.hpp
         Giocatore/Giocatore.cpp
         Giocatore/Giocatore.hpp
-        prova.txt
-        Classifica/classifica.cpp
-        Classifica/classifica.hpp
+        classifica.txt
+        HandlerClassifica/HandlerClassifica.cpp
+        HandlerClassifica/HandlerClassifica.hpp
         Screen/Screen.cpp
         Screen/Screen.hpp
         Screen/Leaderboard.cpp
